--- a/src/DevelopKit/DevelopKit.csproj
+++ b/src/DevelopKit/DevelopKit.csproj
@@ -4,6 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <VersionPrefix>0.6.2</VersionPrefix>
+    <Platform>windows</Platform>
   </PropertyGroup>
 
   <ItemGroup>
