--- a/src/DevelopKit.WindowsApi/DevelopKit.WindowsApi.csproj
+++ b/src/DevelopKit.WindowsApi/DevelopKit.WindowsApi.csproj
@@ -1,12 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFrameworks>net6.0;</TargetFrameworks>
+    <VersionPrefix>0.1.0</VersionPrefix>
   </PropertyGroup>
-
-  <!--<PropertyGroup Condition="'$(Configuration)'=='Release'">
-    
-  </PropertyGroup>-->
+  
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
+    <NoWarn>1701;1702;CA1401;</NoWarn>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0|AnyCPU'">
+    <NoWarn>1701;1702;CA1401;</NoWarn>
+  </PropertyGroup>
 
 </Project>
