--- a/src/DevelopKit.WindowsApi/DevelopKit.WindowsApi.csproj
+++ b/src/DevelopKit.WindowsApi/DevelopKit.WindowsApi.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <TargetFrameworks>net6.0;</TargetFrameworks>
+    <TargetFrameworks>net452;net6.0;netstandard2.0;netstandard2.1;</TargetFrameworks>
     <VersionPrefix>0.1.0</VersionPrefix>
+    <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
