--- a/src/DevelopKit.Encrypt/DevelopKit.Encrypt.csproj
+++ b/src/DevelopKit.Encrypt/DevelopKit.Encrypt.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
