--- a/src/DevelopKit.Wpf/DevelopKit.Wpf.csproj
+++ b/src/DevelopKit.Wpf/DevelopKit.Wpf.csproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0-windows;</TargetFrameworks>
     <UseWPF>true</UseWPF>
-    <VersionPrefix>0.0.1</VersionPrefix>
+    <VersionPrefix>0.0.0.1</VersionPrefix>
     <VersionSuffix>alpha</VersionSuffix>
+    <PackageTags>$(PackageTags)wpf</PackageTags>
   </PropertyGroup>
 
 </Project>
