Update project property

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <Authors>Sharemee</Authors>
+    <Copyright>Copyright © Sharemee 2023-2050</Copyright>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -10,18 +11,12 @@
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <!-- 文件版本 -->
     <FileVersion>$(VersionPrefix)</FileVersion>
-    <!-- 仓库类型, 默认: git -->
-    <RepositoryType>git</RepositoryType>
+    <!-- 仓库类型, 默认: GIT -->
+    <RepositoryType>GIT</RepositoryType>
     <!-- 仓库地址 -->
     <RepositoryUrl>https://github.com/Sharemee/Sharemee.DevelopKit.git</RepositoryUrl>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <RepositoryDirectory>$(MSBuildThisFileDirectory)</RepositoryDirectory>
-    <BuildDirectory>$(RepositoryDirectory)build\</BuildDirectory>
-  </PropertyGroup>
-
-  <!-- Custom properties -->
   <PropertyGroup>
     <!-- 工程前缀名称 -->
     <ProjectPrefix>$(Authors).</ProjectPrefix>
@@ -34,6 +29,14 @@
   <PropertyGroup>
     <AssemblyName>$(ProjectPrefix)$(ProjectName)</AssemblyName>
     <RootNamespace>$(ProjectPrefix)$(ProjectName)</RootNamespace>
+  </PropertyGroup>
+
+  <!-- Custom Property -->
+  <PropertyGroup>
+    <RepositoryDirectory>$(MSBuildThisFileDirectory)</RepositoryDirectory>
+    <BuildDirectory>$(RepositoryDirectory)build\</BuildDirectory>
+    <MsgLogFile>$(BuildDirectory)$(AssemblyName)\build.log</MsgLogFile>
+    <NowTime>$([System.DateTime]::Now)</NowTime>
   </PropertyGroup>
 
   <!-- Package Configuration -->
@@ -76,10 +79,19 @@
   </Choose>
 
   <!-- Test property value -->
-  <Target Name="Test" Condition="$(Configuration)=='Debug'" BeforeTargets="Build">
-    <WriteLinesToFile File="$(BuildDirectory)$(AssemblyName)\build.log" Lines="$([System.DateTime]::Now) [$(Configuration)] $(RepositoryUrl)" />
-    <WriteLinesToFile File="$(BuildDirectory)$(AssemblyName)\build.log" Lines="$([System.DateTime]::Now) [$(Configuration)] $(RepositoryDirectory)" />
-    <WriteLinesToFile File="$(BuildDirectory)$(AssemblyName)\build.log" Lines="$([System.DateTime]::Now) [$(Configuration)] $(PackageTags)" />
-    <WriteLinesToFile Condition="Exists('LICENSE')" File="$(BuildDirectory)$(AssemblyName)\build.log" Lines="$([System.DateTime]::Now) [$(Configuration)] Exists LICENSE file." />
+  <Target Name="Test" AfterTargets="Build">
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="--------------------------------------------------------------------------------" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] MsgLogFile: $(MsgLogFile)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] RepositoryUrl: $(RepositoryUrl)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] PackageTags: $(PackageTags)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] Platform: $(Platform)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] PlatformID: $(PlatformID)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] PlatformName: $(PlatformName)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] PlatformTarget: $(PlatformTarget)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] ProjectGuid: $(ProjectGuid)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] Version: $(Version)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] AssemblyVersion: $(AssemblyVersion)" />
+    <WriteLinesToFile File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] FileVersion: $(FileVersion)" />
+    <WriteLinesToFile Condition="Exists('LICENSE')" File="$(MsgLogFile)" Lines="$(NowTime) [$(Configuration)] Exists LICENSE file" />
   </Target>
 </Project>
