--- a/src/DevelopKit.Wpf/DevelopKit.Wpf.csproj
+++ b/src/DevelopKit.Wpf/DevelopKit.Wpf.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows;</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <VersionPrefix>0.0.0.1</VersionPrefix>
     <VersionSuffix>alpha</VersionSuffix>
