修复烦人的xaml中找不到目标对象问题
这篇博客也是和我遇到一样的问题
https://blog.csdn.net/tang15767688112/article/details/134373740

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,9 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <ProjectName>$(Authors).$(MSBuildProjectName.Replace(" ", "_"))</ProjectName>
-    <AssemblyName>$(ProjectName)</AssemblyName>
-    <RootNamespace>$(ProjectName)</RootNamespace>
+    <AssemblyName>$(Authors).$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>$(Authors).$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <FileVersion>$(VersionPrefix)</FileVersion>
 
@@ -22,7 +21,7 @@
   <PropertyGroup>
     <RepositoryDirectory>$(MSBuildThisFileDirectory)</RepositoryDirectory>
     <BuildDirectory>$(RepositoryDirectory)build\</BuildDirectory>
-    <MsgLogFile>$(BuildDirectory)$(ProjectName)\build.log</MsgLogFile>
+    <MsgLogFile>$(BuildDirectory)$(AssemblyName)\build.log</MsgLogFile>
     <NowTime>$([System.DateTime]::Now)</NowTime>
     <BeforeTargets>Pack</BeforeTargets>
   </PropertyGroup>
@@ -34,7 +33,7 @@
     <PackAsTool>false</PackAsTool>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageOutputPath>$(RepositoryDirectory)build\$(ProjectName)</PackageOutputPath>
+    <PackageOutputPath>$(RepositoryDirectory)build\$(AssemblyName)</PackageOutputPath>
     <PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
   </PropertyGroup>
 
